<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/check_out"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:autofillHints="First Name"
        android:ems="7"
        android:gravity="start|center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/f_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName1"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:autofillHints="Last Name"
        android:ems="7"
        android:gravity="start|center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/l_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="LabelFor,MissingConstraints,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:autofillHints="emailAddress"
        android:ems="20"
        android:gravity="start|center"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName1"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:gravity="start|center"
        android:inputType="phone"
        android:minHeight="48dp"
        android:text="@string/number"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:autofillHints="postalAddress"
        android:gravity="start|center"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:text="@string/address"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:autofillHints="creditCardNumber"
        android:ems="10"
        android:inputType="number"
        android:gravity="start|center"
        android:minHeight="48dp"
        android:text="@string/card_number"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="LabelFor, MissingConstraints" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:autofillHints="creditCardSecurityCode"
        android:ems="6"
        android:inputType="number"
        android:gravity="start|center"
        android:minHeight="48dp"
        android:text="@string/cvv"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="LabelFor, MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:autofillHints="creditCardExpirationDate"
        android:ems="6"
        android:inputType="number"
        android:minHeight="48dp"
        android:gravity="start|center"
        android:text="@string/expiring_date"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="LabelFor, MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/payment"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>